--- a/.htaccess
+++ b/.htaccess
@@ -4,5 +4,6 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^login$ login.php [L]
 RewriteRule ^logout$ logout.php [L]
-RewriteRule ^index.php$ includes/pages/home.php [L]
+RewriteRule ^$ includes/pages/home.php [L]
+RewriteRule ^new$ includes/pages/list_product.php [L]
 RewriteRule ^product/(.*).html$ includes/pages/product.php?url=$1 [L]
