--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,5 @@ RewriteRule ^login$ login.php [L]
 RewriteRule ^logout$ logout.php [L]
 RewriteRule ^$ includes/pages/home.php [L]
 RewriteRule ^new$ includes/pages/list_product.php [L]
+RewriteRule ^feature$ includes/pages/list_product.php?act=feature [L,QSA,B]
 RewriteRule ^product/(.*).html$ includes/pages/product.php?url=$1 [L]
