--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,5 @@ RewriteRule ^logout$ logout.php [L]
 RewriteRule ^$ includes/pages/home.php [L]
 RewriteRule ^new$ includes/pages/list_product.php [L]
 RewriteRule ^feature$ includes/pages/list_product.php?act=feature [L,QSA,B]
+RewriteRule ^category/(.*).html$ includes/pages/list_product.php?act=category&url=$1 [L,QSA,B]
 RewriteRule ^product/(.*).html$ includes/pages/product.php?url=$1 [L]
