--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@ RewriteRule ^login$ login.php [L]
 RewriteRule ^logout$ logout.php [L]
 RewriteRule ^$ includes/pages/home.php [L]
 RewriteRule ^new$ includes/pages/list_product.php [L]
+RewriteRule ^cart$ includes/pages/cart.php [L]
 RewriteRule ^feature$ includes/pages/list_product.php?act=feature [L,QSA,B]
 RewriteRule ^category/(.*).html$ includes/pages/list_product.php?act=category&url=$1 [L,QSA,B]
 RewriteRule ^javascript.js$ api/javascript.php [L,QSA,B]
